manifests/02-HTTPRoute.yaml
##
##
# Declare the routing rules to reach the backend #
##
##

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: httproute-whoami
  namespace: traefik
spec:
  parentRefs:
    # Attach the route to the by-default Traefik Gateway
    - name: traefik-gateway
      kind: Gateway
      sectionName: websecure
      group: gateway.networking.k8s.io
  # Define the hostname
  hostnames:
    - "whoami.docker.localhost"
  rules:
    - matches:
        # Add a matcher on the path
        - path:
            type: Exact
            value: /whoami
      backendRefs:
        - name: whoami-tls
          port: 8443
          weight: 1
          kind: Service
          group: ""
